--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,91 @@
+body {
+    background-color: #F4E9E3;
+}
+
 main {
-    background-color: purple;
+    background-color: #FFFFFF;
+    max-width: 90%;
+    margin: 0 auto;
+    border-radius: 20px;
 }
 
-.hero {
-    background-color: yellow;
+.perfume-image img {
+    display: flex;
+    max-width: 100%;
+    margin: 0;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 
-.perfume-title {
-    background-color: hotpink;
+.perfume-title .perfume {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .8em;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: gray;
+    letter-spacing: 5px;
+    margin-top: 20px;
+}
+
+.perfume-title h1 {
+    font-family: 'Fraunces', serif;
+    font-size: 1.90em;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: black;
+}
+
+.perfume-description p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .8em;
+    font-weight: 500;
+    color: gray;
+    line-height: 20px;
+}
+
+.perfume-prices {
+    display: flex;
+    align-items: center;
+}
+
+.perfume-prices p {
+    font-family: 'Fraunces', serif;
+    font-size: 2em;
+    padding-left: 20px;
+    width: 100%;
+    color: #3D8168;
+    margin: 0;
+}
+
+.perfume-prices s {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .8em;
+    padding-left: 18px;
+    width: 100%;
+    color: gray;
+}
+
+input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    color: #FFFFFF;
+    padding: 1em;
+}
+
+input[type=button] {
+    width: 90%;
+    padding: 12px 0 12px 0;
+    margin: 20px 0 20px 16px;
+    background-color: #3D8168;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: .8em;
+    color: #e2e3ed;
+    border: none;
+    text-align: center;
+    border-radius: 15px;
+}
+
+footer {
+    text-align: center;
 }
