--- a/css/main.css
+++ b/css/main.css
@@ -91,3 +91,119 @@ input[type=button] {
 footer {
     text-align: center;
 }
+
+/* =======================================================
+             DESKTOP STYLES
+   ======================================================= */
+@media only screen and (min-width: 768px) {
+
+    /* For desktop: */
+
+    main {
+        background-color: #FFFFFF;
+        max-width: 50%;
+        margin: 0 auto;
+        border-radius: 10% 0% 0% 10%;
+        outline: 3px dotted blue;
+    }
+
+    .perfume-container {
+        display: flex;
+        margin-top: 100px;
+        border-radius: 10% 0% 0% 10%;
+        outline: 3px dotted red;
+    }
+
+    .perfume-image-container,
+    .perfume-copyright-container {
+        flex: 1;
+    }
+
+    .perfume-copyright-container {
+        margin: 15px;
+    }
+
+    .perfume-image img {
+        max-width: 100%;
+        margin: 0;
+        border-radius: 10% 0% 0% 10%;
+        outline: 3px dotted green;
+    }
+
+    .perfume-title .perfume {
+        font-family: 'Montserrat', sans-serif;
+        font-size: .8em;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: gray;
+        letter-spacing: 5px;
+        margin: 20px 0 0 10px;
+    }
+
+    .perfume-title h1 {
+        font-family: 'Fraunces', serif;
+        font-size: 1.90em;
+        font-weight: 700;
+        text-transform: capitalize;
+        color: black;
+        margin: 20px 0 20px 10px;
+    }
+
+    .perfume-description p {
+        font-family: 'Montserrat', sans-serif;
+        font-size: .8em;
+        font-weight: 500;
+        color: gray;
+        line-height: 20px;
+        margin: 20px 0 20px 10px;
+    }
+
+    .perfume-prices {
+        display: flex;
+        align-items: center;
+    }
+
+    .perfume-prices p {
+        font-family: 'Fraunces', serif;
+        font-size: 2em;
+        padding-left: 10px;
+        width: 100%;
+        color: #3D8168;
+        margin: 0;
+    }
+
+    .perfume-prices s {
+        font-family: 'Montserrat', sans-serif;
+        font-size: .8em;
+        padding-left: 10px;
+        width: 100%;
+        color: gray;
+    }
+
+    input[type=text] {
+        box-sizing: border-box;
+        width: 100%;
+        color: #FFFFFF;
+        padding: 1em;
+    }
+
+    input[type=button] {
+        width: 90%;
+        padding: 12px 0 12px 0;
+        margin: 20px 0 20px 16px;
+        background-color: #3D8168;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 900;
+        font-size: .8em;
+        color: #e2e3ed;
+        border: none;
+        text-align: center;
+        border-radius: 15px;
+    }
+
+    footer {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+}
